cube spinner alignment fixed

--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -141,6 +141,7 @@
   .contact-page {
     .text-zone {
       width: 75%;
+      top: 65%;
     }
   }
 }
